# Numeric-OCR

./: CMakeLists.txt  LICENSE.txt  README.md
data/database/: 1.fdb  4.fdb  5.fdb  6.fdb  7.fdb
data/kernels/: edge_detection.kernel  gaussian_generated.kernel  new_gaussian.kernel  unsharp.kernel
numeric-digits-ocr/: .cproject  .project
numeric-digits-ocr/database/: 0.fdb  2.fdb  3.fdb  8.fdb  9.fdb
numeric-digits-ocr/extlibs/include/dirent/: dirent.h
numeric-digits-ocr/extlibs/include/rapidjson/rapidjson/: prettywriter.h  writer.h
numeric-digits-ocr/kernels/: edge_detection.kernel  gaussian_blur.kernel  identity.kernel  low_pass.kernel  sharpen.kernel  unsharp.kernel
numeric-digits-ocr/src/: main.cpp
numeric-digits-ocr/src/rodu4140/: BMP_Loader.cpp  BMP_Loader.hpp  Color.cpp  Color.hpp  Feature_Database.cpp  Feature_Database.hpp  Feature_Loader.cpp  Feature_Loader.hpp  Feature_Vector.cpp  Feature_Vector.hpp  Image.cpp  Image.hpp  Kernel_Image_Operator.cpp  Kernel_Image_Operator.hpp  base_types.hpp  input.hpp
src/: main.cpp
src/ocr/: BMP_Loader.cpp  BMP_Loader.hpp  Color.cpp  Color.hpp  Feature_Database.cpp  Feature_Database.hpp  Feature_Loader.cpp  Feature_Loader.hpp  Feature_Vector.cpp  Feature_Vector.hpp  Image.cpp  Image.hpp  Kernel_Image_Operator.cpp  Kernel_Image_Operator.hpp  base_types.hpp  input.hpp
src/rodu4140/: Feature_Database.hpp  Feature_Loader.cpp  Feature_Vector.cpp  Feature_Vector.hpp  Image.hpp  Kernel_Image_Operator.hpp  base_types.hpp  input.hpp
